--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ nav ul li a {
 	font-weight: 700;
 	margin-bottom: 10px;
 	text-transform: uppercase;
-	color: #fff;
+	color: #3a3a3a;
 }
 
 .header-content p {
@@ -288,7 +288,7 @@ nav ul li a {
 	margin-top: 0;
 	margin-bottom: 30px;
 	text-transform: capitalize;
-	color: #fff;
+	color: #3a3a3a;
 	font-weight: 500;
 }
 
@@ -471,7 +471,7 @@ nav ul li a {
 #portfolio .portfolio-container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	margin-bottom: 50px;
 	width: 100%;
 }
